# scatify

./: CMakeLists.txt  compile_commands.json
.cache/clangd/index/: FileFailure.hpp.F74CF46BC561F80D.idx  GenericFailure.hpp.3E32F901E58830C7.idx  ReturnStatus.cpp.B8668B383990E336.idx  ReturnStatus.hpp.C61E06123C293EFD.idx  SourceFoldersManager.cpp.D330BE3D322A0500.idx  SourceFoldersManager.hpp.5F1CE816A33C6139.idx  StatusStruct.hpp.CDDAEAEA75B9B2DE.idx  io.cpp.870DA3864E3ED2E0.idx  io.hpp.DD0232A97DF78030.idx  main.cpp.ED396A658B1A9CEC.idx
build-linux/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  scatify
build-linux/.cache/clangd/index/: SDL.h.8DC206254E34973A.idx  SDL_assert.h.BED2CCE10AABE0D0.idx  SDL_asyncio.h.9E00FF7D97C8BCB1.idx  SDL_atomic.h.05ECB2E6103CDF71.idx  SDL_audio.h.8BBDEBF21D947A97.idx  SDL_begin_code.h.5E27F9B8C2580C0D.idx  SDL_bits.h.7BCB498EF5C7C60C.idx  SDL_blendmode.h.14BC713215C08C4B.idx  SDL_camera.h.A20E6841EECD4859.idx  SDL_clipboard.h.040757186EC6818E.idx  SDL_close_code.h.C96AE3247EC90BC4.idx  (+49 more)
build-win/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
src/: main.cpp  sample.midi
src/ErrorHandling/: io.cpp  io.hpp
src/ErrorHandling/Failure/: FileFailure.hpp  GenericFailure.hpp
src/ErrorHandling/ReturnStatus/: ReturnStatus.cpp  ReturnStatus.hpp  StatusStruct.hpp
src/ReturnStatus/: ReturnStatus.hpp
src/SourceFoldersManager/: SourceFoldersManager.cpp  SourceFoldersManager.hpp
src/test/: Either.cpp  Functor.cpp  Maybe.cpp
(+60 files in other folders)
